--- a/form/form.html
+++ b/form/form.html
@@ -21,31 +21,31 @@
                     
                     <h3>Cadastre-se</h3>
                     <hr>
-                    <p>Nome Completo</p>
+                    <div>
+                        <label for="nome">NOME:</label>
+                        <input type="text" name="nome" id="nome">
+                    </div>
                     <br>
-                    <input type="text" name="nome-completo">
 
-                    <br><br>
-
-                    <p>E-mail</p>
+                    <div>
+                        <label for="email">EMAIL:</label>
+                        <input type="email" name="E-mail" id="email">
+                    </div>
                     <br>
-                    <input type="email" name="E-mail">
 
-                    <br><br>
-
-                    <p>Senha</p>
+                    <div>
+                        <label for="senha">SENHA:</label>
+                        <input type="password" name="password" id="senha">
+                    </div>
                     <br>
-                    <input type="password" name="password">
-
-                    <br>
-                    <br>
-                    <input type="checkbox"> Mantenha-me conectado
+                    <div class="conect">
+                        <label class="conect" for="checkbox">Mantenha-me conectado</label>
+                        <input type="checkbox" id="checkbox">
+                     </div>
 
                     <br><br>
 
                     <input type="button" value="ENTRAR" class="submit">
-
-                    <br><br>
 
                 </form>
             </div>
