--- a/form/form.html
+++ b/form/form.html
@@ -22,25 +22,29 @@
                     <h3>Cadastre-se</h3>
                     <hr>
                     <div>
-                        <label for="nome">NOME:</label>
-                        <input type="text" name="nome" id="nome">
+                        <label for="nome">
+                            <input required type="text" name="nome" id="nome" placeholder="NOME:" autofocus>
+                        </label>
                     </div>
                     <br>
 
                     <div>
-                        <label for="email">EMAIL:</label>
-                        <input type="email" name="E-mail" id="email">
+                        <label for="email">
+                            <input required type="email" name="E-mail" id="email" placeholder="EMAIL:" autofocus>
+                        </label>
                     </div>
                     <br>
 
                     <div>
-                        <label for="senha">SENHA:</label>
-                        <input type="password" name="password" id="senha">
+                        <label for="senha">
+                            <input required type="password" name="password" id="senha"  placeholder="SENHA:">
+                        </label>
                     </div>
                     <br>
                     <div class="conect">
-                        <label class="conect" for="checkbox">Mantenha-me conectado</label>
-                        <input type="checkbox" id="checkbox">
+                        <label class="conect" for="checkbox">Mantenha-me conectado
+                            <input type="checkbox" id="checkbox">
+                        </label>
                      </div>
 
                     <br><br>
