--- a/form/form.html
+++ b/form/form.html
@@ -21,33 +21,21 @@
                     
                     <h3>Cadastre-se</h3>
                     <hr>
-                    <div>
-                        <label for="nome">
-                            <input required type="text" name="nome" id="nome" placeholder="NOME:" autofocus>
-                        </label>
+                    <div class="single-input">
+                        <input required type="text" name="" id="nome" class="input">
+                        <label for="nome">Nome</label>
+                    </div>
+
+                    <div class="single-input">
+                        <input required type="email" name="" id="email" class="input">
+                        <label for="email">Email</label>
+                    </div>
+
+                    <div class="single-input">
+                        <input required type="password" name="password" id="senha" class="input">
+                        <label for="senha">Senha</label>
                     </div>
                     <br>
-
-                    <div>
-                        <label for="email">
-                            <input required type="email" name="E-mail" id="email" placeholder="EMAIL:" autofocus>
-                        </label>
-                    </div>
-                    <br>
-
-                    <div>
-                        <label for="senha">
-                            <input required type="password" name="password" id="senha"  placeholder="SENHA:">
-                        </label>
-                    </div>
-                    <br>
-                    <div class="conect">
-                        <label class="conect" for="checkbox">Mantenha-me conectado
-                            <input type="checkbox" id="checkbox">
-                        </label>
-                     </div>
-
-                    <br><br>
 
                     <input type="button" value="ENTRAR" class="submit">
 
