--- a/index.html
+++ b/index.html
@@ -15,35 +15,33 @@
 <body>
 
     <header>
+        <nav class="menu">
 
-        <div class="menu">
-            <ul class="header">
+                <a class="logo" href="/">BeatrizChap</a>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
 
-                <li class="header"> 
-                    <a class="header" href="index.html"> HOME </a>
-                </li>
+                <ul class="nav-list">
+                    <li> 
+                        <a class="header" href="/"> HOME </a>
+                    </li>
 
-                <li class="header"> 
-                    <a class="header" href="about-us.html"> SOBRE NÓS </a>
-                </li>
+                    <li> 
+                        <a class="header" href="/"> SOBRE NÓS </a>
+                    </li>
 
-                <li class="header">
-                    <a class="header" href="contat.html"> CONTATO </a>
-                </li>
+                    <li>
+                        <a class="header" href="/"> CONTATO </a>
+                    </li>
 
-                <li class="header">
-                    <a class="header" href="projetos.html"> PORTIFÓLIO </a>
-                </li>
-
-                <li class="imagem">
-                    
-                        <img src="img-lading-page/bia-semfundo.png" width="60px" height="70px" text-align="left">
-                   
-                </li>
-
-            </ul>
-        </div>
-
+                    <li>
+                        <a class="header" href="/"> PORTIFÓLIO </a>
+                    </li>
+                </ul>
+        </nav>
     </header>
 
     <main class="principal">
