--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                     </a>
                 </button>
             </div>
-            <img src="img-lading-page/fundo.png" width="450px" height="450px">
+            <div class="bg">
+                <img src="img-lading-page/fundo.png" width="420px" height="350px">
+            </div>
     </main>
 
     
